[project]
name = "googlesheetsmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.164.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "gspread>=6.2.0",
    "mcp[cli]>=1.4.1",
    "oauth2client>=4.1.3",
]
